force-app/main/default/objects/Product2/fields/AVA_B2BLEX__TaxCode__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__TaxCode__c</fullName>
    <label>Tax Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>