force-app/main/default/objects/Product2/fields/AVA_B2BLEX__UPC__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__UPC__c</fullName>
    <label>UPC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>