force-app/main/default/objects/Product2/fields/External__c.field-meta.xml
<CustomField>
    <fullName>External__c</fullName>
    <formula>IF( ISBLANK( External_URL__c ) , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External</label>
    <type>Checkbox</type>
</CustomField>