force-app/main/default/objects/Product2/fields/Freight_Amount_US__c.field-meta.xml
<CustomField>
    <fullName>Freight_Amount_US__c</fullName>
    <label>Freight Amount US</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>