force-app/main/default/objects/Product2/fields/Has_International_SKU__c.field-meta.xml
<CustomField>
    <fullName>Has_International_SKU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has International SKU</label>
    <type>Checkbox</type>
</CustomField>