force-app/main/default/objects/Product2/fields/hasQuantityRule__c.field-meta.xml
<CustomField>
    <fullName>hasQuantityRule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>(Deprecated) hasQuantityRule</label>
    <type>Checkbox</type>
</CustomField>