force-app/main/default/objects/Product2/fields/HeightIn__c.field-meta.xml
<CustomField>
    <fullName>HeightIn__c</fullName>
    <label>(Deprecated) Height (in)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>