force-app/main/default/objects/Product2/fields/Internal_Name__c.field-meta.xml
<CustomField>
    <fullName>Internal_Name__c</fullName>
    <label>Internal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>