force-app/main/default/objects/Product2/fields/International_Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>International_Product_SKU__c</fullName>
    <label>International Product SKU</label>
    <length>20</length>
    <type>Text</type>
</CustomField>