force-app/main/default/objects/Product2/fields/isTaxable__c.field-meta.xml
<CustomField>
    <fullName>isTaxable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>(Deprecated) Taxable</label>
    <type>Checkbox</type>
</CustomField>