force-app/main/default/objects/Product2/fields/LengthIn__c.field-meta.xml
<CustomField>
    <fullName>LengthIn__c</fullName>
    <label>(Deprecated) Length (in)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>