force-app/main/default/objects/Product2/fields/Product_Description_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Description_Rich_Text__c</fullName>
    <label>Product Description Rich Text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>