force-app/main/default/objects/Product2/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual Level Membership</fullName>
            </value>
            <value>
                <fullName>Practice Level Membership</fullName>
            </value>
            <value>
                <fullName>Certification Kit</fullName>
            </value>
            <value>
                <fullName>Individual Academia Membership</fullName>
            </value>
            <value>
                <fullName>Permanent Membership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>