force-app/main/default/objects/Product2/fields/Renewal_DVM_Count_Max__c.field-meta.xml
<CustomField>
    <fullName>Renewal_DVM_Count_Max__c</fullName>
    <label>Renewal DVM Count Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>