force-app/main/default/objects/Product2/fields/Renewal_Product__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal Product</label>
    <type>Checkbox</type>
</CustomField>