force-app/main/default/objects/Product2/fields/Schoox_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Schoox_Job_Id__c</fullName>
    <label>Schoox Job Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>