force-app/main/default/objects/Product2/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <label>Short Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>