force-app/main/default/objects/Product2/fields/Stripe_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Product_Id__c</fullName>
    <label>Stripe Product Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>