force-app/main/default/objects/Product2/fields/Stripe_Product_URL__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Product_URL__c</fullName>
    <formula>HYPERLINK(&quot;https://dashboard.stripe.com/test/products/&quot; &amp; Stripe_Product_Id__c, &quot;Stripe Link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stripe Product URL</label>
    <type>Text</type>
</CustomField>