force-app/main/default/objects/Product2/fields/Stripe_Renewal_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Renewal_Product_Id__c</fullName>
    <label>(Deprecated) Stripe Renewal Product Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>