force-app/main/default/objects/Product2/fields/Stripe_Renewal_Product_URL__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Renewal_Product_URL__c</fullName>
    <formula>HYPERLINK(&quot;https://dashboard.stripe.com/test/products/&quot; &amp; Stripe_Renewal_Product_Id__c, &quot;Stripe Link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Deprecated) Stripe Renewal Product URL</label>
    <type>Text</type>
</CustomField>