force-app/main/default/objects/Product2/fields/VolumeIn__c.field-meta.xml
<CustomField>
    <fullName>VolumeIn__c</fullName>
    <formula>LengthIn__c  *  WidthIn__c *  HeightIn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Deprecated) Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>