force-app/main/default/objects/Product2/fields/WC_Id__c.field-meta.xml
<CustomField>
    <fullName>WC_Id__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>