force-app/main/default/objects/Product2/fields/WeightLbs__c.field-meta.xml
<CustomField>
    <fullName>WeightLbs__c</fullName>
    <label>(Deprecated) Weight (lbs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>