force-app/main/default/objects/Product2/fields/WidthIn__c.field-meta.xml
<CustomField>
    <fullName>WidthIn__c</fullName>
    <label>(Deprecated) Width (in)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>