force-app/main/default/objects/Product2/listViews/Active_Products.listView-meta.xml
<ListView>
    <fullName>Active_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Internal_Name__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.PRODUCT_CLASS</columns>
    <columns>Product_Group__c</columns>
    <columns>Membership__c</columns>
    <columns>Renewal_DVM_Count_Max__c</columns>
    <columns>Renewal_DVM_Count_Min__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Products</label>
</ListView>